Change to scatter plot only

--- a/Scatter_Plots.ipynb
+++ b/Scatter_Plots.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scatter plot\n",
+    "\n",
+    "Given a dataset of two random variables $X_1$ and $X_2$, the easiest way to visualize their relationship is by drawing a scatter plot. In this notebook, we will discuss how to generate scatter plot in Python."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,9 +31,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of contents\n",
+    "- [Bivariate: basic form](#Bivariate_SP)\n",
+    "- [Multivariate variations](#Multivariate_SP)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Bivariate: basic form <a name=\"Bivariate_SP\"></a>\n",
+    "To give an example, let's consider the iris dataset. We choose sepal length and width as the variable $X_1$ and $X_2$, respectively. In Python, we can use `matplotlib.pyplot.scatter` to generate the scatter plot of those two variables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -54,7 +82,34 @@
     "ax.set_xlim(x_min, x_max)\n",
     "ax.set_ylim(y_min, y_max)\n",
     "ax.tick_params(labelsize=12)\n",
-    "fig.savefig('./Figures/Scatter.png', bbox_inches='tight')"
+    "# fig.savefig('./Figures/Scatter.png', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This scatter plot uses dots to represent the data points, where the horizontal and vertical position of each dot indicate the values for sepal length and sepal width, respectively.\n",
+    "\n",
+    "A scatter plot is great for identifying the correlation pattern between two numeric variables. As can be spotted in the above figure, the sepal length and the width are positively correlated, i.e., if sepal length is increased, we would have a high chance to observe increased sepal width too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Multivariate variations <a name=\"Multivariate_SP\"></a>\n",
+    "\n",
+    "A basic two-variable scatter plot can be easily extended to incorporate a third variable:\n",
+    "- If the third variable is of categorical type, we can encode it by changing the dot color or shape;\n",
+    "- If the third variable is of numeric type, a common encoding would be varying the dot size."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example of adding a categorical variable, we could enrich the two-variable scatter plot with *iris type*. This can be done by passing an extra color argument to the `matplotlib.pyplot.scatter` function."
    ]
   },
   {
@@ -98,13 +153,22 @@
     "ax.set_ylim(y_min, y_max)\n",
     "ax.tick_params(labelsize=12)\n",
     "ax.legend(fontsize='large')\n",
-    "fig.savefig('./Figures/Scatter_categorical.png', bbox_inches='tight')"
+    "# fig.savefig('./Figures/Scatter_categorical.png', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example of adding a numeric variable, let's enrich the two-variable scatter plot with *petal length*. This can be done by passing an extra size argument to the `matplotlib.pyplot.scatter` function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -146,7 +210,21 @@
     "    ax.scatter([],[], c='c', s=bin, label=str(int(bin)))\n",
     "ax.legend(scatterpoints=1,title=\"Petal length\")\n",
     "\n",
-    "fig.savefig('./Figures/Scatter_bubblechart.png', bbox_inches='tight')"
+    "# fig.savefig('./Figures/Scatter_bubblechart.png', bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this plot, a larger dot indicates a flower sample with a larger petal length value. This type of figure is also known as the bubble chart."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When the dataset contains more than three variables, we could use a **pair plot** to visualize pairwise relationships between variables. This can be achieved by using `seaborn`: first, we use `seaborn.PairGrid` to initialize the plot figure and PairGrid object. Subsequently, we specify what to plot on the diagonal and off-diagonal facets. Here, we consider four variables: *sepal length*, *sepal width*, *petal length*, and *petal width*."
    ]
   },
   {
@@ -176,15 +254,15 @@
     "g = sns.PairGrid(df, diag_sharey=False, corner=True, height=1.8, aspect=1.2)\n",
     "g.map_lower(sns.scatterplot)\n",
     "g.map_diag(sns.histplot);\n",
-    "g.savefig(\"./Figures/Scatter_pairplot.png\")"
+    "# g.savefig(\"./Figures/Scatter_pairplot.png\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As shown above, off-diagonal facets show the scatter plots between different pairs of variables, while histograms of each variable are plotted on diagonal facets."
+   ]
   }
  ],
  "metadata": {
